--- a/LiveReport2013/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/LiveReport2013/en.lproj/MainStoryboard_iPhone.storyboard
@@ -30,10 +30,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Ne2-nT-BwU" firstAttribute="bottom" secondItem="16" secondAttribute="bottom" type="default" id="Ip1-qb-6aX"/>
-                            <constraint firstItem="Ne2-nT-BwU" firstAttribute="leading" secondItem="16" secondAttribute="leading" type="default" id="haq-KX-gLy"/>
-                            <constraint firstItem="Ne2-nT-BwU" firstAttribute="top" secondItem="16" secondAttribute="top" type="default" id="jS6-re-3Qc"/>
-                            <constraint firstItem="Ne2-nT-BwU" firstAttribute="trailing" secondItem="16" secondAttribute="trailing" type="default" id="u7v-ex-xvK"/>
+                            <constraint firstItem="Ne2-nT-BwU" firstAttribute="top" secondItem="16" secondAttribute="top" type="default" id="8aF-RU-7BF"/>
+                            <constraint firstItem="Ne2-nT-BwU" firstAttribute="leading" secondItem="16" secondAttribute="leading" type="default" id="k8H-AT-eG9"/>
+                            <constraint firstItem="Ne2-nT-BwU" firstAttribute="trailing" secondItem="16" secondAttribute="trailing" type="default" id="oyc-OD-4fX"/>
+                            <constraint firstItem="Ne2-nT-BwU" firstAttribute="bottom" secondItem="16" secondAttribute="bottom" type="default" id="ysD-eG-Y7U"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="8ft-hJ-KaG"/>
@@ -58,18 +58,18 @@
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="Ie9-qR-EG6">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="C9g-Hw-So3"/>
+                                    <constraint firstAttribute="width" constant="60" id="lRi-0M-IDy"/>
                                 </constraints>
                             </pageControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="i64-eT-SIN" firstAttribute="top" secondItem="17" secondAttribute="top" type="default" id="5zY-Bi-2k6"/>
-                            <constraint firstItem="i64-eT-SIN" firstAttribute="leading" secondItem="17" secondAttribute="leading" type="default" id="9GU-Hs-Asb"/>
-                            <constraint firstItem="i64-eT-SIN" firstAttribute="bottom" secondItem="17" secondAttribute="bottom" type="default" id="D7A-cG-SDI"/>
-                            <constraint firstAttribute="bottom" secondItem="Ie9-qR-EG6" secondAttribute="bottom" constant="1" id="QaN-tM-c1D"/>
-                            <constraint firstItem="i64-eT-SIN" firstAttribute="trailing" secondItem="17" secondAttribute="trailing" type="default" id="hw5-Ex-Rsj"/>
-                            <constraint firstItem="Ie9-qR-EG6" firstAttribute="leading" secondItem="17" secondAttribute="leading" constant="130" id="uP2-tA-p0i"/>
+                            <constraint firstItem="i64-eT-SIN" firstAttribute="bottom" secondItem="17" secondAttribute="bottom" type="default" id="2sY-fY-oLi"/>
+                            <constraint firstItem="i64-eT-SIN" firstAttribute="leading" secondItem="17" secondAttribute="leading" type="default" id="3gW-Qo-cSO"/>
+                            <constraint firstItem="i64-eT-SIN" firstAttribute="top" secondItem="17" secondAttribute="top" type="default" id="4PH-RN-VMV"/>
+                            <constraint firstAttribute="bottom" secondItem="Ie9-qR-EG6" secondAttribute="bottom" constant="1" id="Fqc-QY-DBA"/>
+                            <constraint firstItem="i64-eT-SIN" firstAttribute="trailing" secondItem="17" secondAttribute="trailing" type="default" id="XYv-ds-Yl0"/>
+                            <constraint firstItem="Ie9-qR-EG6" firstAttribute="centerX" secondItem="i64-eT-SIN" secondAttribute="centerX" type="default" id="zZv-HO-mrp"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="M52-Dd-vSM">
@@ -125,10 +125,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Nun-s7-iwa" firstAttribute="leading" secondItem="hXa-2s-PU0" secondAttribute="leading" type="default" id="6cO-bL-JfY"/>
-                            <constraint firstItem="Nun-s7-iwa" firstAttribute="trailing" secondItem="hXa-2s-PU0" secondAttribute="trailing" type="default" id="LeG-SP-QVH"/>
-                            <constraint firstItem="Nun-s7-iwa" firstAttribute="top" secondItem="hXa-2s-PU0" secondAttribute="top" type="default" id="Wps-NL-ZJx"/>
-                            <constraint firstItem="Nun-s7-iwa" firstAttribute="bottom" secondItem="hXa-2s-PU0" secondAttribute="bottom" type="default" id="YWG-Cc-Lp1"/>
+                            <constraint firstItem="Nun-s7-iwa" firstAttribute="trailing" secondItem="hXa-2s-PU0" secondAttribute="trailing" type="default" id="C2r-Yi-ZcY"/>
+                            <constraint firstItem="Nun-s7-iwa" firstAttribute="bottom" secondItem="hXa-2s-PU0" secondAttribute="bottom" type="default" id="LrR-At-fXf"/>
+                            <constraint firstItem="Nun-s7-iwa" firstAttribute="leading" secondItem="hXa-2s-PU0" secondAttribute="leading" type="default" id="kqj-99-I0G"/>
+                            <constraint firstItem="Nun-s7-iwa" firstAttribute="top" secondItem="hXa-2s-PU0" secondAttribute="top" type="default" id="lPt-75-WAT"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Qxc-gi-3X8"/>
@@ -181,10 +181,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="vpU-lJ-4iC" firstAttribute="top" secondItem="3Wz-5o-oyE" secondAttribute="top" type="default" id="32d-ag-Uo6"/>
-                            <constraint firstItem="vpU-lJ-4iC" firstAttribute="bottom" secondItem="3Wz-5o-oyE" secondAttribute="bottom" type="default" id="Sw5-90-bKe"/>
-                            <constraint firstItem="vpU-lJ-4iC" firstAttribute="leading" secondItem="3Wz-5o-oyE" secondAttribute="leading" type="default" id="aGc-gN-WIR"/>
-                            <constraint firstItem="vpU-lJ-4iC" firstAttribute="trailing" secondItem="3Wz-5o-oyE" secondAttribute="trailing" type="default" id="bjt-nb-Ha6"/>
+                            <constraint firstItem="vpU-lJ-4iC" firstAttribute="bottom" secondItem="3Wz-5o-oyE" secondAttribute="bottom" type="default" id="30d-dc-DpB"/>
+                            <constraint firstItem="vpU-lJ-4iC" firstAttribute="top" secondItem="3Wz-5o-oyE" secondAttribute="top" type="default" id="6PN-Tg-hVg"/>
+                            <constraint firstItem="vpU-lJ-4iC" firstAttribute="trailing" secondItem="3Wz-5o-oyE" secondAttribute="trailing" type="default" id="OCW-e3-Lvs"/>
+                            <constraint firstItem="vpU-lJ-4iC" firstAttribute="leading" secondItem="3Wz-5o-oyE" secondAttribute="leading" type="default" id="ygw-Zo-xg0"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="KTa-UQ-L0Y"/>
@@ -237,10 +237,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="av6-wq-Gw4" firstAttribute="top" secondItem="mwB-lz-8H4" secondAttribute="top" type="default" id="TZ2-Ef-CQb"/>
-                            <constraint firstItem="av6-wq-Gw4" firstAttribute="leading" secondItem="mwB-lz-8H4" secondAttribute="leading" type="default" id="gUF-7n-Cnd"/>
-                            <constraint firstItem="av6-wq-Gw4" firstAttribute="trailing" secondItem="mwB-lz-8H4" secondAttribute="trailing" type="default" id="gXV-iv-CNQ"/>
-                            <constraint firstItem="av6-wq-Gw4" firstAttribute="bottom" secondItem="mwB-lz-8H4" secondAttribute="bottom" type="default" id="m12-kZ-FLJ"/>
+                            <constraint firstItem="av6-wq-Gw4" firstAttribute="bottom" secondItem="mwB-lz-8H4" secondAttribute="bottom" type="default" id="P3g-bO-FO5"/>
+                            <constraint firstItem="av6-wq-Gw4" firstAttribute="trailing" secondItem="mwB-lz-8H4" secondAttribute="trailing" type="default" id="boy-S6-fXT"/>
+                            <constraint firstItem="av6-wq-Gw4" firstAttribute="leading" secondItem="mwB-lz-8H4" secondAttribute="leading" type="default" id="czz-Ga-kIC"/>
+                            <constraint firstItem="av6-wq-Gw4" firstAttribute="top" secondItem="mwB-lz-8H4" secondAttribute="top" type="default" id="uXJ-V8-bSo"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Vvj-KL-wtR"/>
@@ -293,10 +293,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="PSu-RA-2lT" firstAttribute="leading" secondItem="ySi-CI-pLb" secondAttribute="leading" type="default" id="Hds-QR-Onp"/>
-                            <constraint firstItem="PSu-RA-2lT" firstAttribute="trailing" secondItem="ySi-CI-pLb" secondAttribute="trailing" type="default" id="RKc-Uf-gbC"/>
-                            <constraint firstItem="PSu-RA-2lT" firstAttribute="bottom" secondItem="ySi-CI-pLb" secondAttribute="bottom" type="default" id="Tmu-gX-xgn"/>
-                            <constraint firstItem="PSu-RA-2lT" firstAttribute="top" secondItem="ySi-CI-pLb" secondAttribute="top" type="default" id="k40-ei-f33"/>
+                            <constraint firstItem="PSu-RA-2lT" firstAttribute="leading" secondItem="ySi-CI-pLb" secondAttribute="leading" type="default" id="8Sr-6F-Jgo"/>
+                            <constraint firstItem="PSu-RA-2lT" firstAttribute="trailing" secondItem="ySi-CI-pLb" secondAttribute="trailing" type="default" id="arV-ID-qvQ"/>
+                            <constraint firstItem="PSu-RA-2lT" firstAttribute="bottom" secondItem="ySi-CI-pLb" secondAttribute="bottom" type="default" id="eup-8p-ZRK"/>
+                            <constraint firstItem="PSu-RA-2lT" firstAttribute="top" secondItem="ySi-CI-pLb" secondAttribute="top" type="default" id="pmI-7J-JuC"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="oeG-0H-0iE"/>
